# cats-python

./: README.md  pyproject.toml  setup.py  test_client.py  test_server.py
cats/: __init__.py  app.py  codecs.py  compression.py  conn.py  conn.pyi  errors.py  events.py  handlers.py  handshake.py  headers.py  identity.py  identity.pyi  middleware.py  request.py  request.pyi  response.py  server.py  typing.py  utils.py
cats/server/: __init__.py  app.py  conn.py  conn.pyi  handlers.py  middleware.py  request.py  request.pyi  response.py  server.py
tests/: conftest.py  handlers.py  test_api.py  test_events.py  utils.py
