[tool.poetry]
name = "cats-python"
version = "2.3.4"
description = "Cifrazia Action Transport System for Python"
authors = ["Bogdan Parfenov <adam.brian.bright@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
tornado = "^6.1"
ujson = "^4.0.2"
sentry-sdk = "^0.20.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
djangorestframework = "^3.12.2"
pytest-asyncio = "^0.14.0"
pytest-tornado = "^0.8.1"
twine = "^3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
