[tool.poetry]
name = "cats-python"
version = "3.0.0"
description = "Cifrazia Action Transport System for Python"
authors = ["Bogdan Parfenov <adam.brian.bright@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8"
sentry-sdk = "^1.1.0"
tornado = "^6.1"
ujson = "^4.0.2"

[tool.poetry.dev-dependencies]
Django = ">=2.2"
djangorestframework = "^3.12.4"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.11.1"
pytest-tornado = "^0.8.1"
twine = "^3.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
